added ApiServlet for Tomcat